--- a/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/style.css
+++ b/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/style.css
@@ -15,3 +15,128 @@ body {
   font-family: 'Oswald', Arial, Helvetica, sans-serif;
   margin: 50px;
 }
+
+/* container */
+.container {
+  display: grid;
+  gap: 10px;
+}
+
+/* Header */
+
+.header {
+  display: grid;
+  grid-template-areas:
+    'hero hero feature-1'
+    'hero hero feature-2';
+}
+
+.hero {
+  grid-area: hero;
+  min-height: 300px;
+  background-image: url(./img/shoes-hero.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 50px;
+}
+
+.hero > * {
+  display: none;
+}
+
+.features {
+  background-color: #ccc;
+  color: white;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  cursor: pointer;
+}
+
+.feature-1 {
+  grid-area: feature-1;
+  background-image: url(./img/black-shoe.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.feature-2 {
+  grid-area: feature-2;
+  background-image: url(./img/red-shoe.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.features .price {
+  font-size: 3em;
+  font-weight: 200;
+}
+
+/* Navigasi */
+
+.menu {
+  order: -1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.menu .brand {
+  font-size: 1.3rem;
+  color: #333;
+}
+
+.menu ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 5px;
+}
+
+.menu a {
+  display: block;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  padding: 5px;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+}
+
+/* resonsive Breakpoint */
+
+/* default dekstop */
+@media (max-width: 1024px) {
+  .menu {
+    order: inherit;
+    grid-template-columns: 1fr;
+  }
+
+  .menu .brand {
+    display: none;
+  }
+
+  .hero > * {
+    display: block;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    margin-bottom: 5px;
+  }
+
+  .header .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  }
+}
+
+/* tablet */
+@media (max-width: 768px) {
+}
+
+/* handphone */
+@media (max-width: 500px) {
+}
