--- a/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/style.css
+++ b/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/style.css
@@ -104,9 +104,120 @@ body {
   text-transform: uppercase;
 }
 
+/* Hamburger menu */
+.menu-toggle {
+  height: 20px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: all 1s;
+  position: relative;
+  z-index: 999;
+}
+
+.menu-toggle input {
+  position: absolute;
+  width: 40px;
+  height: 28px;
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+  left: -5px;
+  top: -5px;
+}
+
+.menu-toggle span {
+  display: block;
+  height: 3px;
+  width: 28px;
+  background-color: #000;
+  border-radius: 3px;
+  transition: all 0.5s ease-out;
+}
+
+/* Hamburger menu animation  */
+
+.menu-toggle span:nth-child(2) {
+  transform-origin: 0 0;
+}
+
+.menu-toggle span:nth-child(4) {
+  transform-origin: 0 100%;
+}
+
+.menu-toggle input:checked ~ span:nth-child(2) {
+  transform: rotate(45deg) translate(-1px, -1px);
+  background-color: #fff;
+}
+
+.menu-toggle input:checked ~ span:nth-child(3) {
+  transform: scale(0);
+}
+
+.menu-toggle input:checked ~ span:nth-child(4) {
+  transform: rotate(-45deg) translate(-1px, 0);
+  background-color: #fff;
+}
+
+/* Services */
+.services {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.service {
+  background-color: #fff;
+  padding: 15px;
+  text-align: center;
+  border: 1px solid #aaa;
+  border-radius: 3px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+.service .icon {
+  font-size: 3rem;
+}
+
+.service h3 {
+  font-size: 1.5rem;
+}
+
+.service p {
+  font-weight: 200;
+  letter-spacing: 1px;
+  font-style: 0.8em;
+}
+
+/* Gallery */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  justify-items: center;
+  padding: 10px;
+}
+
+.gallery h2 {
+  grid-column: 1 / -1;
+}
+
+.gallery img {
+  width: 100%;
+  height: 200px; /* Menetapkan tinggi tetap */
+  object-fit: cover; /* Menjaga rasio aspek dan memotong gambar jika diperlukan */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
 /* resonsive Breakpoint */
 
-/* default dekstop */
+/* ukuran default dekstop */
 @media (max-width: 1024px) {
   .menu {
     order: inherit;
@@ -133,10 +244,46 @@ body {
   }
 }
 
-/* tablet */
+/* ukuran tablet */
 @media (max-width: 768px) {
+  .menu {
+    order: -1;
+    justify-items: end;
+  }
+
+  .menu ul {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    flex-direction: column;
+    background-color: #000;
+    z-index: 1;
+    justify-content: space-evenly;
+    align-items: center;
+    transform: translateY(-100%);
+    width: 100%;
+    opacity: 0;
+    transition: all 1s;
+  }
+
+  .menu-toggle {
+    display: flex;
+  }
+
+  .menu ul.slide {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-/* handphone */
-@media (max-width: 500px) {
+/* ukuran handphone */
+@media (max-width: 600px) {
+  .header {
+    grid-template-areas:
+      'hero'
+      'feature-1'
+      'feature-2';
+  }
 }
